fix: Adjust padding in footer and landing page for better layout on small screens

--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -14,6 +14,7 @@
 
         @media (max-width:665px) {
             top: 10px;
+            padding: 10px 10px;
         }
     }
 
